# FieldSpaceNN

./: .gitignore  README.md  pyproject.toml  setup.py  setup.sh
fieldspacenn/: __init__.py
fieldspacenn/configs/: cnn_train.yaml  era5_prediction_rollout.yaml  mg_transformer_diffusion_train.yaml  mg_transformer_train.yaml
fieldspacenn/configs/data_zooms/: default.yaml
fieldspacenn/configs/dataloader/: netcdf_regular.yaml  zarr_healpix.yaml
fieldspacenn/configs/hydra/: default.yaml
fieldspacenn/configs/logger/: mlflow.yaml  wandb.yaml
fieldspacenn/configs/mgrids/: healpix.yaml
fieldspacenn/configs/model/: cnn.yaml  cnn_vae.yaml  mg_autoencoder.yaml  mg_diffusion.yaml  mg_flowmatching.yaml  mg_healpix_conv_ae.yaml  mg_transformer.yaml  mg_transformer_diffusion.yaml  mg_vision_transformer.yaml  vision_transformer.yaml
fieldspacenn/src/: rollout.py  test.py  test_encdec.py  test_flowmatching.py  test_latent.py  train.py
fieldspacenn/src/data/: datasets_base.py  datasets_healpix.py  datasets_icon.py  datasets_regular_to_healpix.py  normalizer.py  pl_data_module.py
fieldspacenn/src/modules/: base.py  factorization.py
fieldspacenn/src/utils/: helpers.py  logger.py  losses.py  schedulers.py  visualization.py
stableclimgen/: __init__.py
stableclimgen/configs/: FST_MSViT_train.yaml  UNET_train.yaml  ViT_train.yaml  cnn_vae_train.yaml  diffusion_train.yaml  healpix_transformer_train.yaml  healpix_vae_test.yaml  healpix_vae_train.yaml  icon_transformer_train.yaml  latent_transformer_train.yaml  mg_autoencoder_train.yaml  mg_transformer_diffusion_train.yaml  mg_transformer_test.yaml  mg_transformer_train.yaml  mg_vae_train.yaml  mgno_diffusion_transformer_test.yaml  mgno_diffusion_transformer_train.yaml  mgno_transformer_test.yaml  mgno_transformer_train.yaml  mgno_vae_train.yaml  no_vae_train.yaml  time_transformer_train.yaml  vae_train.yaml
stableclimgen/configs/data_split/: default.yaml  regular.yaml
stableclimgen/src/: decode.py  test.py  test_healpix.py  test_icon.py  test_mgno_diffusion_healpix.py  train.py
(+243 files in other folders)
