[tool.poetry]
name = "stableclimgen"
version = "0.1.0"
description = "A framework of AI methods for generating unstructured climate data."
authors = ["Climate Informatics and Technology group at DKRZ (Deutsches Klimarechenzentrum)"]
license = "CC0"
readme = "README.md"

homepage = "https://github.com/FREVA-CLINT/stableclimgen/tree/main"
repository = "https://github.com/FREVA-CLINT/stableclimgen/tree/main"
documentation = "https://github.com/FREVA-CLINT/stableclimgen/tree/main"
classifiers = [
    'Development Status :: 3 - Alpha',
    'Intended Audience :: Science/Research',
    'Topic :: Scientific/Engineering :: Artificial Intelligence',
    'Topic :: Scientific/Engineering :: Atmospheric Science',
    'License :: OSI Approved :: CC0',
    "Operating System :: OS Independent",
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.6',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    "Programming Language :: Python :: 3.12",
    'Programming Language :: Python :: 3 :: Only',
]

[tool.poetry.dependencies]
python = ">= 3.7"
torch = "== 2.3.1"
tqdm = ">= 4.59.0"
torchvision = ">= 0.2.1"
torchaudio = "== 2.3.1"
lightning = "== 2.4.0"
hydra-core = "== 1.3.2"
einops = "0.8.0"
numpy = ">= 1.20.1"
matplotlib = ">= 3.4.3"
tensorboardX = ">= 2.4.0"
tensorboard = ">=2.8.0"
xarray = ">= 0.20.2"
netcdf4 = ">=1.5.8"
setuptools = "==80.9.0"
xesmf = ">=0.6.2"
cartopy = ">=0.20.2"
numba = ">=0.55.1"
scipy = "==1.15.3"
healpy = "==1.18.1"
opt-einsum = "==3.4.0"
zarr = "2.18.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
stableclimgen-train = "stableclimgen.src.train:train"
stableclimgen-test-healpix = "stableclimgen.src.test_healpix:test"
